# napari-brainways

./: .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test.yml  test_and_deploy.yml
docs/: getting_started.md  index.md  requirements.txt
docs/source/: conf.py
src/napari_brainways/: __init__.py  _sample_project.py  brainways_ui.py  conftest.py  napari.yaml  test_utils.py  utils.py  widget.py
src/napari_brainways/_tests/: test_reader.py  test_sample_data.py  test_widget.py
src/napari_brainways/controllers/: affine_2d_controller.py  analysis_controller.py  annotation_viewer_controller.py  base.py  cell_3d_viewer_controller.py  cell_detector_controller.py  registration_controller.py  tps_controller.py
src/napari_brainways/controllers/_tests/: test_affine_2d_controller.py  test_analysis_controller.py  test_annotation_viewer_controller.py  test_cell_3d_viewer_controller.py  test_cell_detector_controller.py  test_registration_controller.py  test_tps_controller.py
src/napari_brainways/widgets/: affine_2d_widget.py  analysis_widget.py  cell_detector_widget.py  create_project_dialog.py  create_subject_dialog.py  registration_widget.py  workflow_widget.py
src/napari_brainways/widgets/_tests/: test_create_project_dialog.py  test_registration_widget.py
