[metadata]
name = napari_brainways
description = Brainways UI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bkntr/napari-brainways
author = Ben Kantor
author_email = benkantor@mail.tau.ac.il
license = GPL-3.0
license_file = LICENSE
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/bkntr/napari-brainways/issues
    Documentation = https://github.com/bkntr/napari-brainways#README.md
    Source Code = https://github.com/bkntr/napari-brainways
    User Support = https://github.com/bkntr/napari-brainways/issues

[options]
packages = find:
install_requires =
    brainways==0.1.8.1
    importlib-resources
    napari[all]==0.4.18
    qtpy==2.3.1
    stardist==0.8.3
    tensorflow==2.13.0
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-brainways = napari_brainways:napari.yaml

[options.extras_require]
all =
    brainways-reg-model
testing =
    py
    pyqt5
    pytest
    pytest-cov
    pytest-qt<4.1.0  # https://pytest-qt.readthedocs.io/en/latest/
    tox

[options.package_data]
* = *.yaml
napari_brainways = resources/*
